# publication-schema

./: Makefile  README.md  mkdocs.yml  setup.cfg  setup.py
.github/workflows/: main.yaml
docs/: 404.html  index.html  search.html  sitemap.xml
docs/Boolean/: index.html
docs/Contact/: index.html
docs/Date/: index.html
docs/Datetime/: index.html
docs/Decimal/: index.html
docs/Double/: index.html
docs/Float/: index.html
docs/GeoJSONgeometry/: index.html
docs/GeoJSONproperties/: index.html
docs/GeoLocation/: index.html
docs/Integer/: index.html
docs/Ncname/: index.html
docs/Nodeidentifier/: index.html
docs/Objectidentifier/: index.html
docs/Provenance/: index.html
docs/Publication/: index.html
docs/SampleTypeCount/: index.html
docs/String/: index.html
docs/TechnologyCounts/: index.html
docs/Time/: index.html
docs/Uri/: index.html
docs/Uriorcurie/: index.html
docs/contact__affiliation/: index.html
docs/contact__email/: index.html
docs/credits/: index.html
docs/description/: index.html
docs/geoJSONgeometry__coordinates/: index.html
docs/geoJSONgeometry__type/: index.html
docs/geoJSONproperties__ISO3166alpha3/: index.html
docs/geoJSONproperties__city/: index.html
docs/geoJSONproperties__continent/: index.html
docs/geoJSONproperties__country/: index.html
docs/geoJSONproperties__latitude/: index.html
docs/geoJSONproperties__longitude/: index.html
docs/geoJSONproperties__precision/: index.html
model/: CONFIG.yaml
progenetix_publication/: Publication.py
tests/: test_input_against_model.py
(+39 files in other folders)
