[metadata]
name = progenetix_publication
url = https://github.com/progenetix/progenetix-publication
author = Michael Baudis
author_email = michael@baud.is
summary = Schema for publications in the Progenetix database
description = Schema for publications in the Progenetix database
long_description = Schema for publications in the Progenetix database
home_page = https://progenetix.github.io/progenetix_publication
license = CC0 1.0 Universal
python_requires = >=3.7
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = 
    linkml
    LOD
    Modeling
    Linked open data
    model
    Beacon
    GA4GH
    Progenetix

[options]
include_package_data = True

[files]
packages =
    progenetix_publication

data-files = progenetix_publication/model = progenetix_publication/model/*
    progenetix_publication/json_schema = progenetix_publication/json_schema/*
    progenetix_publication/model = progenetix_publication/model/*
    progenetix_publication/owl = progenetix_publication/owl/*


